cocktails added in news section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <!-- style start -->
     <link href="css/plugins.css" media="all" rel="stylesheet" type="text/css">
-    <link href="css/style.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/style3.css" media="all" rel="stylesheet" type="text/css">
     <!-- style end -->
     <!-- google fonts start -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7CPlayfair+Display:500,600,700,800,900" rel="stylesheet" type="text/css">
@@ -166,7 +166,7 @@
                                                     <div class="more-button-bg-center more-button-circle visible-xs" style="
                                                     margin-top: 440px" ></div>
                                                     <div class="more-button-bg-center more-button-circle hidden-xs" style="
-                                                    margin-top: -130px"></div>
+                                                    margin-top: 220px"></div>
                                                     <div class="more-button-txt-center">
                                                         <span>Watch Video</span>
                                                     </div>
@@ -1086,19 +1086,7 @@
                             <div class="hover-effect the-team"></div>
                         </div>
                         <!-- section item end -->
-                        <!-- section item start -->
-                        <div class="post-box hover-effect-img">
-                            <div class="hover-icons">
-                                <a class="ion-plus popup-photo-gallery-open" href="img/inside/5.jpg" title=""></a>
-                            </div>
-                            <!-- circle wrapper start -->
-                            <div class="circle-wrapper-full">
-                                <div class="carousel-item-all carousel-item-inside-04"></div>
-                            </div>
-                            <!-- circle wrapper end -->
-                            <div class="hover-effect the-team"></div>
-                        </div>
-                        <!-- section item end -->
+                        
                     </div>
                 </div>
             </div>
@@ -1353,7 +1341,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        This vibrant creation aims to capture the electric energy of Bengaluru, the capital of India’s Karnataka state. The tequila-based drink features mango purée, lime juice, turmeric and a spicy Tajín rim.
+                                        This Tequila-based elixir, fused with mango puree, lime juice, and a turmeric twist, encapsulates the vibrant spirit of the Garden City. Tajin-seasoned rim, a homage to its diverse cultural zest, completes this kaleidoscopic libation.
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1405,7 +1393,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        Hyderabad is the muse for this purple-pigmented tipple. Gin is combined with orange and elderflower liqueurs as well as saffron-infused honey, lemon juice and egg white
+                                        Inspired by the regal history and rich culinary traditions of Hyderabad, this cocktail combines the luxurious essence of saffron-infused honey with the citrus brightness of orange liqueur and the velvety texture of egg white, creating a drink fit for royalty.
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1467,7 +1455,7 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        The pink hue of this cocktail is a reference to Jaipur, which is nicknamed the Pink City for its blush-coloured buildings. For it, spiced rum is mixed with Amarula, Kashmiri tea, rose syrup and cardamom bitters
+                                        Just like the colorful gems and rich history of Jaipur, this cocktail shines with the floral notes of rose syrup and the exotic spice of cardamom, creating a regal and vibrant drink.
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1519,7 +1507,8 @@
                                     <!-- divider end -->
                                     <!-- section txt start -->
                                     <p>
-                                        This smoky cocktail—with warming flavours of bourbon, chai-tea infused vermouth, cinnamon syrup and citrus indica bitters—was inspired by the spice markets of Kolkata.
+                                        Drawing inspiration from the bustling spice markets of Kolkata, this cocktail blends the warmth of chai tea and cinnamon with the rich depth of bourbon, creating a sensory journey through the flavors of the city.
+                                        
                                     </p>
                                     <!-- section txt end -->
                                     <!-- divider start -->
@@ -1547,6 +1536,177 @@
                             <img src="img/news/4.jpg" >
                         </div>
                         <!-- halve IMG end -->
+                    </div>
+                    <!-- halve end -->
+                    <!-- halve start -->
+                    <div class="halves">
+                        <!-- halve IMG start -->
+                        <div>
+                            <img src="img/menu/chennai.jpg" >
+                        </div>
+                        <!-- halve IMG end -->
+                        <!-- halve TXT start -->
+                        <div class="half half-color">
+                            <!-- row start -->
+                            <div class="row news-txt">
+                                <!-- col start -->
+                                <div class="col-md-12">
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                    <!-- section subtitle start -->
+                                    <!-- <div class="blog-tag">May 3, 2022</div> -->
+                                    <!-- section subtitle end -->
+                                    <!-- divider start -->
+                                    <div class="divider-m"></div>
+                                    <!-- divider end -->
+                                    <!-- section title start -->
+                                    <h2>
+                                        CHENNAI LOCAL SARAKKU                                   
+                                    </h2>
+                                    <!-- section title end -->
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                    <!-- section txt start -->
+                                    <p>
+                                        Reflecting the vibrant and bold flavors of Chennai's TASMAC, this cocktail combines the rich depth of whiskey with the tangy sweetness of tamarind, aromatic curry leaf, and a zesty kick of ginger beer.
+                                    </p>
+                                    <!-- section txt end -->
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                    <!-- button start -->
+                                    <!-- <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-3">
+                                        <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
+                                        <div class="more-button-txt-center more-button-txt-center-close">
+                                            <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
+                                        </div>
+                                    </div> -->
+                                    <!-- button end -->
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                </div>
+                                <!-- col end -->
+                            </div>
+                            <!-- row end -->
+                        </div>
+                        <!-- halve TXT end -->
+                    </div>
+                    <!-- halve end -->
+                    <!-- halve start -->
+                    <div class="halves">
+                        <!-- halve TXT start -->
+                        <div class="half half-color">
+                            <!-- row start -->
+                            <div class="row news-txt">
+                                <!-- col start -->
+                                <div class="col-md-12">
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                    <!-- section subtitle start -->
+                                    <!-- <div class="blog-tag">May 4, 2022</div> -->
+                                    <!-- section subtitle end -->
+                                    <!-- divider start -->
+                                    <div class="divider-m"></div>
+                                    <!-- divider end -->
+                                    <!-- section title start -->
+                                    <h2>
+                                        MUMBAI MONSOON                                    
+                                    </h2>
+                                    <!-- section title end -->
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                    <!-- section txt start -->
+                                    <p>
+                                        Inspired by the monsoon rains that bring relief to the city of Mumbai, this cocktail combines refreshing mint and zesty nutmeg to bring out the refreshing essence of the air after a rain shower.
+                                    </p>
+                                    <!-- section txt end -->
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                    <!-- button start -->
+                                    <!-- <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-4">
+                                        <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
+                                        <div class="more-button-txt-center more-button-txt-center-close">
+                                            <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
+                                        </div>
+                                    </div> -->
+                                    <!-- button end -->
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                </div>
+                                <!-- col end -->
+                            </div>
+                            <!-- row end -->
+                        </div>
+                        <!-- halve TXT end -->
+                        <!-- halve IMG start -->
+                        <div>
+                            <img src="img/menu/Mumbai.jpg" >
+                        </div>
+                        <!-- halve IMG end -->
+                    </div>
+                    <!-- halve end -->
+                    <!-- halve start -->
+                    <div class="halves">
+                        <!-- halve IMG start -->
+                        <div>
+                            <img src="img/menu/goa.jpg" >
+                        </div>
+                        <!-- halve IMG end -->
+                        <!-- halve TXT start -->
+                        <div class="half half-color">
+                            <!-- row start -->
+                            <div class="row news-txt">
+                                <!-- col start -->
+                                <div class="col-md-12">
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                    <!-- section subtitle start -->
+                                    <!-- <div class="blog-tag">May 3, 2022</div> -->
+                                    <!-- section subtitle end -->
+                                    <!-- divider start -->
+                                    <div class="divider-m"></div>
+                                    <!-- divider end -->
+                                    <!-- section title start -->
+                                    <h2>
+                                        GOA COASTLINE                                   
+                                    </h2>
+                                    <!-- section title end -->
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                    <!-- section txt start -->
+                                    <p>
+                                        Transport yourself to the sandy beaches of Goa with this tropical delight featuring the smooth flavors of coconut rum, the tropical sweetness of pineapple, and the azure hues of blue curaçao, all topped with a creamy coconut finish.
+                                    </p>
+                                    <!-- section txt end -->
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                    <!-- button start -->
+                                    <!-- <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-3">
+                                        <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
+                                        <div class="more-button-txt-center more-button-txt-center-close">
+                                            <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
+                                        </div>
+                                    </div> -->
+                                    <!-- button end -->
+                                    <!-- divider start -->
+                                    <div class="divider-l"></div>
+                                    <!-- divider end -->
+                                </div>
+                                <!-- col end -->
+                            </div>
+                            <!-- row end -->
+                        </div>
+                        <!-- halve TXT end -->
                     </div>
                     <!-- halve end -->
                 </div>
