href changed from cocktail menu to testimonals

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                         <!-- items selector start -->
                         <div class="item-selector">
                             <a href="#" class="item-button" style="color: white;text-decoration: underline;" data-target="menu-1">SIGNATURE&nbsp; DISHES</a>
-                            <a href="#" class="item-button" style="color: white;text-decoration: underline;" data-target="menu-2">TRY OUR EXCLUSIVE&nbsp; COCKTAILS</a>
+                            <a href="#blog" class="item-button" style="color: white;text-decoration: underline;" data-target="menu-2">TRY OUR EXCLUSIVE&nbsp; COCKTAILS</a>
                         </div>
                         <!-- items selector end -->
                         <!-- divider start -->
