navbar spacing adjustments done

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                             <li class="hidden-xs">
                                 <a></a>
                             </li>
-                            <li>
-                                <a href="#home">Home</a>
+                            <li style="position: relative;">
+                                <a href="#home" style="left: -20px;">Home</a>
                             </li>
-                            <li>
-                                <a href="#about">About</a>
+                            <li style="position: relative;">
+                                <a href="#about" style="left: -10px;">About</a>
                             </li>
-                            <li>
-                                <a href="#works">Menu</a>
+                            <li style="position: relative;">
+                                <a href="#works" style="left: 10px;">Menu</a>
                             </li>
                             <li class="hidden-xs">
                                 <!-- logo desktop start -->
@@ -101,14 +101,14 @@
                             <li class="hidden-xs">
                                 <a></a>
                             </li>
-                            <li>
-                                <a href="#services">Services</a>
+                            <li style="position: relative;">
+                                <a href="#services" style="left: -25px;">Services</a>
                             </li>
-                            <li>
-                                <a href="#blog">Testimonials</a>
+                            <li style="position: relative;">
+                                <a href="#blog" style="left: -25px;">Testimonials</a>
                             </li>
-                            <li>
-                                <a href="#contact">Contact</a>
+                            <li style="position: relative;">
+                                <a href="#contact" style="left: -30px;">Contact</a>
                             </li>
                         </ul>
                         <!-- menu end -->
