watch video mobile moved

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                         <!-- items selector start -->
                         <div class="item-selector">
                             <a href="#" class="item-button" style="color: white;text-decoration: underline;" data-target="menu-1">SIGNATURE&nbsp; DISHES</a>
-                            <a href="#blog" class="item-button" style="color: white;text-decoration: underline;" data-target="menu-2">TRY OUR EXCLUSIVE&nbsp; COCKTAILS</a>
+                            <a href="#blog" class="item-button" style="color: white;text-decoration: underline;"data-target="menu-1" >TRY OUR EXCLUSIVE&nbsp; COCKTAILS</a>
                         </div>
                         <!-- items selector end -->
                         <!-- divider start -->
@@ -1281,7 +1281,7 @@
                                 font-family: 'Playfair Display', serif;
                                                     font-size: 20px;
                                                     font-style: normal;
-                                                    line-height: 1.75; position: relative; top: -50px;">Indulge in the flavors of our restaurant as seen through the discerning eyes of Toronto Life. Explore their expert 
+                                                    line-height: 1.75; position: relative; top: -50px;">Below are our seven signature cocktails. Explore Toronto life's expert 
                                                     reviews, savoring the delectable insights and culinary critiques that showcase our finest dishes. 
                         </blockquote>
                         
