extra space removed

--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                 </div>
                 <!-- row end -->
                 <!-- divider start -->
-                <div class="divider-l"></div>
+                <!-- <div class="divider-l"></div> -->
                 <!-- divider end -->
             </div>
         </div>
