--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <!-- style start -->
     <link href="css/plugins.css" media="all" rel="stylesheet" type="text/css">
-    <link href="css/style3.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/style.css" media="all" rel="stylesheet" type="text/css">
     <!-- style end -->
     <!-- google fonts start -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7CPlayfair+Display:500,600,700,800,900" rel="stylesheet" type="text/css">
@@ -72,13 +72,13 @@
                                 <a></a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#home" style="left: -20px;">Home</a>
+                                <a href="#home" >Home</a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#about" style="left: -10px;">About</a>
+                                <a href="#about" >About</a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#works" style="left: 10px;">Menu</a>
+                                <a href="#works" >Menu</a>
                             </li>
                             <li class="hidden-xs">
                                 <!-- logo desktop start -->
@@ -102,15 +102,17 @@
                                 <a></a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#services" style="left: -25px;">Services</a>
+                                <a href="#services" >Services</a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#blog" style="left: -25px;">Testimonials</a>
+                                <a href="#blog" >Testimonials</a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#contact" style="left: -30px;">Contact</a>
+                                <a href="#contact" >Contact</a>
                             </li>
                         </ul>
+
+                        
                         <!-- menu end -->
                     </div>
                     <!-- Reservation button -->
