--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                                 <a></a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#home" >Home</a>
+                                <a href="#home"  class="adjust-left" style="left: -20px;">Home</a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#about" >About</a>
+                                <a href="#about"  class="adjust-left" style="left: -10px;">About</a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#works" >Menu</a>
+                                <a href="#works"  class="adjust-left" style="left: 10px;">Menu</a>
                             </li>
                             <li class="hidden-xs">
                                 <!-- logo desktop start -->
@@ -102,17 +102,23 @@
                                 <a></a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#services" >Services</a>
+                                <a href="#services"  class="adjust-left" style="left: -25px;">Services</a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#blog" >Testimonials</a>
+                                <a href="#blog"   class="adjust-left" style="left: -25px;">Testimonials</a>
                             </li>
                             <li style="position: relative;">
-                                <a href="#contact" >Contact</a>
+                                <a href="#contact"  class="adjust-left" style="left: -30px;">Contact</a>
                             </li>
                         </ul>
 
-                        
+                        <style>
+                            @media (max-width: 768px) {
+                                .adjust-left {
+                                    left: 0 !important;
+                                }
+                            }
+                        </style>
                         <!-- menu end -->
                     </div>
                     <!-- Reservation button -->
