reservation and maps modified

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                 <div class="more-wraper-center">
                                     <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle">                                        </div>
                                     <div class="more-button-txt-center more-button-txt-center-close">
-                                        <a href="https://reservations.tangohq.com/reservation/new/92bcc4d6-d59b-427a-b6dd-47766d5168fb" target="_blank" style="font-size: large;" >
+                                        <a href="https://www.yelp.com/reservations/uYcgGsaoEe_eyE2fbURxVA" target="_blank" style="font-size: large;" >
                                             <span style="color:#000000;"></span>Reserve<br>Now</span>
                                         </a>
                                         
@@ -1509,7 +1509,7 @@
                         </div>
                         <!-- halve TXT end -->
                         <!-- halve IMG start -->
-                        <div>
+                        <div >
                             <img src="img/menu/Mumbai.jpg" >
                         </div>
                         <!-- halve IMG end -->
@@ -1877,7 +1877,7 @@
                     <div id="google-maps-wrapper">
                         <!-- google maps start -->
                         <div class="google-maps">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.5745410137056!2d-79.4449243!3d43.6778176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b347391b1a04f%3A0xe1d47ffaf16ead7e!2s1224%20St%20Clair%20Ave%20W%2C%20Toronto%2C%20ON%20M6E%201B4%2C%20Canada!5e0!3m2!1sen!2sus!4v1706730380526!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://storage.googleapis.com/maps-solutions-hnzrbifw58/locator-plus/6ouz/locator-plus.html" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                         <!-- google maps end -->
                     </div>
