owl-nav news moved

--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,14 @@
                 <!-- <div class="divider-l"></div> -->
                 <!-- divider end -->
                 <!-- owl nav start -->
-                <div class="owl-nav owl-nav-custom-news" style="top: -90px;"></div>
+                <div class="owl-nav owl-nav-custom-news"></div>
+                <style>
+                    @media (min-width: 500px) and (max-width: 768px) {
+                        .owl-nav-custom-news {
+                            top: -230px;
+                        }
+                    }
+                </style>
                 <!-- owl nav end -->
                 <!-- row start -->
                 <div class="row">
