owl-nav news moved

--- a/index.html
+++ b/index.html
@@ -1585,6 +1585,11 @@
                             top: -120px;
                         }
                     }
+                    @media (min-width: 769px) {
+                        .owl-nav-custom-news {
+                            top: -120px;
+                        }
+                    }
                 </style>
                 <!-- owl nav end -->
                 <!-- row start -->
