--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@
     
     
     <!--blog start-->
-    <div id="blog" class="section-all bg-dark">
+    <div  class="section-all bg-dark">
             <!-- divider start -->
             <div class="divider-xl"></div>
             <!-- divider end -->
@@ -1171,7 +1171,7 @@
             <!-- container start -->
             <div class="container-fluid nopadding" id="adjust-height" style="position: relative;">
                 <!-- carousel start -->
-                <div class="owl-carousel owl-carousel-news">
+                <div id="blog" class="owl-carousel owl-carousel-news">
                     <!-- halve start -->
                     <div class="halves">
                         <!-- halve IMG start -->
