--- a/index.html
+++ b/index.html
@@ -1580,7 +1580,7 @@
                 <!-- owl nav start -->
                 <div class="owl-nav owl-nav-custom-news"></div>
                 <style>
-                    @media (min-width: 320px) and (max-width: 768px) {
+                    @media (max-width: 768px) {
                         .owl-nav-custom-news {
                             top: -120px;
                         }
